--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,14 @@
-flask==2.2.3
+blinker==1.9.0
+click==8.1.8
+colorama==0.4.6
+Flask==2.0.2
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==1.0.1
-werkzeug==2.2.3
+greenlet==3.2.1
+itsdangerous==2.2.0
+Jinja2==3.1.6
+MarkupSafe==3.0.2
+SQLAlchemy==2.0.40
+typing_extensions==4.13.2
+Werkzeug==2.0.2
+WTForms==3.2.1
